# cuda

./: .gitignore  CMakeLists.txt  README.md
include/: common.cuh
src/: error_check.cu  global_mem.cu  hello.cu  query.cu  set_device.cu
